# SimpleMediaSorter-MP

./: .gitignore  CMakeLists.txt  README.md  WIKI.md  build_log.txt  build_project.ps1  convert_icon.py  package_release.ps1
src/: main.cpp
src/branding/: SimpleMediaSorter-MP_icon.psd
src/core/: DatabaseManager.cpp  DatabaseManager.h  ExifToolWrapper.cpp  ExifToolWrapper.h  FFmpegWrapper.cpp  FFmpegWrapper.h  Job.h  JobManager.cpp  JobManager.h  JobModel.cpp  JobModel.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h  WorkerFactory.cpp  WorkerFactory.h
src/ui/: JobDetailsPane.cpp  JobDetailsPane.h  JobListView.cpp  JobListView.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/ui/components/: JobBaseWidget.cpp  JobBaseWidget.h  SidebarWidget.cpp  SidebarWidget.h
src/ui/modules/: BackupWidget.cpp  BackupWidget.h  ImageWidget.cpp  ImageWidget.h  RenamerWidget.cpp  RenamerWidget.h  SorterWidget.cpp  SorterWidget.h  VideoWidget.cpp  VideoWidget.h
src/workers/: CopyWorker.cpp  CopyWorker.h  FFmpegWorker.cpp  FFmpegWorker.h  ImageWorker.cpp  ImageWorker.h  MetadataWorker.cpp  MetadataWorker.h  SorterWorker.cpp  SorterWorker.h
